# hybrid-spectral-clustering

./: CMakeLists.txt  README.md  job.sh  sync_to_hpc.sh  sync_to_local.sh
data/input/: gaussian_1024.csv  gaussian_16384.csv  gaussian_32768.csv  gaussian_4096.csv  gaussian_65536.csv  gaussian_8192.csv  mixed_1024.csv  mixed_16384.csv  mixed_32768.csv  mixed_4096.csv  mixed_65536.csv  mixed_8192.csv
data/output/: gaussian_1024.csv  gaussian_131072.csv  gaussian_16384.csv  gaussian_16384_r1.csv  gaussian_32768.csv  gaussian_4096.csv  gaussian_4096_r2.csv  gaussian_65536.csv  gaussian_8192_r1.csv  mixed_1024.csv  mixed_131072.csv  mixed_16384.csv  mixed_32768.csv  mixed_65536.csv
data/output-t4/: gaussian_16384_r1.csv  gaussian_4096.csv  gaussian_8192_r4.csv  mixed_16384_r8.csv  mixed_4096_r8.csv  mixed_8192_r8.csv
include/: common.hpp  eigen_solver.hpp  spectral_clustering.hpp
scripts/: job.sh  job_template.pbs  submit_jobs.sh  sync_to_hpc.sh  sync_to_local.sh
src/: eigen_solver.cpp  k_means.cpp  main.cpp  spectral_clustering.cpp
tools/: ari_accuracy.py  generator.py  plotter.py
